# isimulate-bridge

./: CMakeLists.txt  LICENSE.md  README.md
config/: isimulate_bridge_amm.xml  isimulate_bridge_capabilities.xml
src/: CMakeLists.txt  cl_arguments.c  iSimulateBridge.cpp  service_discovery.c  service_discovery.h  websocket_session.cpp  websocket_session.hpp
